--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
 }
 
 #pattern {
-    background: transparent url('../asset/background/dot.png') repeat 0 0;
+    background: transparent url('https://sinister.codes/asset/background/dot.png') repeat 0 0;
     top: 0;
     left: 0;
     margin: 0;
